Modified "Motyvų paieška de novo" description.

--- a/Latex/kursinis_darbas.tex
+++ b/Latex/kursinis_darbas.tex
@@ -386,16 +386,11 @@ funkcijomis.
 Praturtintų sekų radimui panaudota komandinės eilutės įrankio
 \emph{HOMER} \footnote{\emph{HOMER} įrankio aprašymas.
 Prieiga per internetą:\\ http://homer.ucsd.edu/homer/}
-(v4.11 versija) programa \emph{homer2}. Gauti
-motyvai identifikuoti, pasinaudojus transkripcijos faktorių
-profilių duomenų baze \emph{JASPAR}
-\footnote{Castro-Mondragon JA, Riudavets-Puig R, Rauluseviciute I,
-Berhanu Lemma R, Turchi L, Blanc-Mathieu R, Lucas J, Boddie P, Khan A,
-Manosalva Pérez N, Fornes O, Leung TY, Aguirre A, Hammal F, Schmelter D,
-Baranasic D, Ballester B, Sandelin A, Lenhard B, Vandepoele K,
-Wasserman WW, Parcy F, and Mathelier A JASPAR 2022: the 9th release of
-the open-access database of transcription factor binding profiles Nucleic
-Acids Res. 2022 Jan 7;50(D1):D165-D173.; doi: 10.1093/nar/gkab1113}.
+(v4.11 versija) programa \emph{findMotifsGenome.pl},
+analizuojanti \emph{BED} formato failus (faile specifikuotas
+pozicijas), ir ieškanti praturtintų sekų atitikimo anotuotame
+naminės pelės \emph{mm10} referentiniame genome.
+<PAPILDYTI>
 
 \subsection{Sekų praturtinimo analizė}
 Pildoma...
@@ -539,7 +534,7 @@ motyvo atitikimų nustatyta skirtinguose mėginiuose.
 \end{figure}
 
 Antroje lentelėje (2 lentelė) nurodoma, kokią procentinę dalį
-tarp visų mėginių regionų sudaro Tbx5 motyvai.
+tarp visų mėginių regionų sudaro \emph{Tbx5} motyvai.
 
 \begin{table}[htb]
     \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
