--- a/Latex/kursinis_darbas.tex
+++ b/Latex/kursinis_darbas.tex
@@ -12,6 +12,10 @@
 \usepackage{makecell}
 \usepackage[euler]{textgreek}
 \usepackage{hyperref}
+\usepackage{multirow}
+\usepackage{boldline}
+\usepackage{floatrow}
+\floatsetup[table]{capposition=top}
 
 \usepackage{amsmath, amsthm, amssymb}
 \usepackage{graphicx}
@@ -144,7 +148,6 @@ ląstelių.
     \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
     \small
     \caption*{1 lentelė. Mėginių charakteristikos}
-    %\begin{tabular}{|M{2cm}|M{3.5cm}|M{3.7cm}|M{3cm}|M{3cm}|M{0.5cm}|}
     \begin{tabular}{|c|c|c|c|c|c|c|}
     \hline
     %\thead{Sample\\ window}
@@ -392,8 +395,20 @@ pozicijas), ir ieškanti praturtintų sekų atitikimo anotuotame
 naminės pelės \emph{mm10} referentiniame genome.
 <PAPILDYTI>
 
-\subsection{Sekų praturtinimo analizė}
-Pildoma...
+\subsection{Praturtintų sekų biologinių funkcijų nustatymas}
+Identifikuotų motyvų biologinės funkcijos nustatytos, pasinaudojus
+\emph{MEME} programų paketo \footnote{Timothy L. Bailey, James Johnson,
+Charles E. Grant, William S. Noble, "The MEME Suite", Nucleic Acids
+Research, 43(W1):W39-W49, 2015.} programa \emph{GOMo}
+\footnote{Fabian A. Buske, Mikael Bodén, Denis C. Bauer and Timothy
+L. Bailey, "Assigning roles to DNA regulatory motifs using
+comparative genomics", Bioinformatics, 26(7), 860-866, 2010.}, kuri
+naudodamasi pateiktomis motyvų nukleotidų sekomis, analizuoja sekų
+promotorius, saugomus \emph{GOMo} sekų duomenų bazėje, ir nustato,
+ar pateikti motyvai yra susiję su genais, susietais su vienu ar
+keliais genų ontologijos (\emph{angl.} Gene Ontology (GO))
+biologinių procesų, ląstelinių komponentų ir molekulinių funkcijų
+apibūdinimais.
 
 \newpage
 
@@ -563,8 +578,111 @@ tarp visų mėginių regionų sudaro \emph{Tbx5} motyvai.
 
 \newpage
 
+\subsection{\emph{De novo} identifikuoti motyvai}
+\emph{De novo} motyvų paieškos programos įvykdymas buvo
+ilgiausiai trukęs analizės etapas, lyginat su kitais 
+tyrimo žingsniais. Šio etapo metu buvo sugeneruoti \emph{html}
+formato failai, kuriuose buvo pateiktas identifikuotų motyvų sąrašas,
+išrikiuotas pagal p-vertę didėjančia tvarka, motyvų sekų logotipai,
+nuorodos į puslapius su pozicinėmis motyvų svorių matricomis bei
+identifikuotų motyvų procentinę dalį visame mėginio sekų rinkinyje,
+pateiktame \emph{fasta} formatu.
+
+Trečioje lentelėje (lentelė 3) kiekvienam mėginiui pavaizduoti trys
+motyvai, turintys mažiausią p-vertę bei apimantys didžiausią mėginių
+pilno sekų rinkinio dalį (procentiškai). Penktame trečios lentelės
+stulpelyje nurodyta, kokią procentinę dalį mėginyje sudaro
+identifikuotas \emph{Tbx5} motyvas.
+
+\begin{table}[htb]
+    \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+    \small
+    \caption*{3 lentelė. Identifikuotų motyvų pavyzdžiai}
+    \begin{tabular}{|c|c|c|c|c|}
+    \hline
+    \textbf{Mėginys} & \textbf{Pavadinimas} & \textbf{p vertė} &
+                       \textbf{\thead{Procentinė\\ dalis}} &
+                       \textbf{\emph{Tbx5} motyvas}\\
+    \hlineB{2.5}
+    \multirow{3}{*}{\textbf{mm\_2\_cardiac\_muscle\_r1}} &
+                    Tbx6(T-box) & 1e-1881 & 20.28\% &
+                    \multirow{3}{*}{\thead{1e-3266;\\ 54.87\%}} \\
+    \cline{2-4}           & Tbet(T-box) & 1e-1472 & 16.48\% & \\
+    \cline{2-4}           & Eomes(T-box) & 1e-1332 & 25.49\% & \\
+    \hlineB{2.5}
+    \multirow{3}{*}{\textbf{mm\_4\_emb\_fibr\_r1}} &
+                    Mef2b(MADS) & 1e-3037 & 15.60\% &
+                    \multirow{3}{*}{\thead{1e-2359;\\ 44.22\%}}\\
+    \cline{2-4}           & TRPS1(Zf) & 1e-2983 & 31.99\% & \\
+    \cline{2-4}           & GATA3(Zf) & 1e-2936 & 25.49\% & \\
+    \hlineB{2.5}
+    \multirow{3}{*}{\textbf{mm\_4\_emb\_fibr\_r2}} &
+                    Fos(bZIP) & 1e-2912 & 13.22\% &
+                    \multirow{3}{*}{\thead{1e-1873;\\ 42.97\%}}\\
+    \cline{2-4}           & Fra1(bZIP) & 1e-2889 & 12.66\% & \\
+    \cline{2-4}           & Fra2(bZIP) & 1e-2855 & 11.36\% & \\
+    \hlineB{2.5}
+    \multirow{3}{*}{\textbf{mm\_4\_emb\_fibr\_r3}} &
+                    GATA3(Zf) & 1e-1895 & 25.06\% &
+                    \multirow{3}{*}{\thead{1e-1391;\\ 41.04\%}}\\
+    \cline{2-4}              & TRPS1(Zf) & 1e-1872 & 31.55\% & \\
+    \cline{2-4}              & Fos(bZIP) & 1e-1857 & 11.66\% & \\
+    \hlineB{2.5}
+    \multirow{3}{*}{\textbf{mm\_1\_heart\_r1}} &
+                    Mef2c(MADS) & 1e-1226 & 8.45\% &
+                    \multirow{3}{*}{\thead{1e-438;\\ 39.08\%}}\\
+    \cline{2-4}              & Mef2b(MADS) & 1e-1174 & 12.63\% & \\
+    \cline{2-4}              & Mef2d(MADS) & 1e-1174 & 5.42\% & \\
+    \hlineB{2.5}
+    \multirow{3}{*}{\textbf{mm\_4\_emb\_fibr\_r4}} &
+                    TRPS1(Zf) & 1e-1404 & 63.53\% &
+                    \multirow{3}{*}{-}\\
+    \cline{2-4}              & Gata3(Zf) & 1e-1271 & 52.43\% & \\
+    \cline{2-4}              & Gata4(Zf) & 1e-1024 & 38.94\% & \\
+    \hlineB{2.5}
+    \multirow{3}{*}{\textbf{mm\_3\_cardiac\_fibr\_r1}} &
+                    Tbx6(T-box) & 1e-1431 & 38.28\% &
+                    \multirow{3}{*}{\thead{1e-1474;\\ 69.71\%}}\\
+    \cline{2-4}              & Tbet(T-box) & 1e-1077 & 33.27\% & \\
+    \cline{2-4}              & Tbx21(T-box) & 1e-1034 & 30.60\% & \\
+    \hline
+    \end{tabular}
+\end{table}
+
+Remiantis trečios lentelės duomenimis bei naudojantis statistinių
+hipotezių testavimu itin mažos \emph{p} vertės rodo, jog tikimybė,
+kad identifikuoti motyvai atsitiktiniai, yra labai maža, todėl
+gauti duomenys yra statistiškai reišmingi - juos galima toliau
+analizuoti.
+
+Pirmajame ir paskutiniame mėginyje, kurie atitinkamai pažymėti
+\emph{mm\_2\_cardiac\_muscle\_r1} ir \emph{mm\_3\_cardiac\_fibr\_r1},
+\emph{Tbx5} motyvo \emph{p} vertės buvo mažiausios, o procentinė
+dalis - didžiausia. Palyginus šių mėginių rezultatus su 4.4
+dalyje gautais tų pačių mėginių rezultatais pastebimas didelis
+procentinės dalies neatitikimas, tačiau šie procentai
+apskaičiuoti, naudojantis skirtingais metodais. Taip pat 4.4
+dalyje naudota pozicinė svorių matrica neatitinka šioje dalyje
+identifikuoto \emph{Tbx5} motyvo pozicinės svorių matricos.
+
+Ketvirtoje lentelėje (lentelė 4) nurodytas bendras identifikuotų
+motyvų skaičius kiekvienam mėginiui.
+
+\begin{table}[htb]
+    \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+    \small
+    \caption*{4 lentelė. Identifikuotų motyvų skaičius mėginiuose}
+    \begin{tabular}{|c|c|c|c|c|}
+    \hline
+    \textbf{Mėginys} & \textbf{Pavadinimas} & \textbf{p vertė} &
+                       \textbf{\thead{Procentinė\\ dalis}} &
+                       \textbf{\emph{Tbx5} motyvas}\\
+    \hlineB{2.5}
+    \end{tabular}
+\end{table}
+
 \subsection{\emph{De novo} nustatytų motyvų biologinės funkcijos}
-Pildoma...
+\emph{MEME} programų paketo programa 
 
 \newpage
 
